# knodswebwallet

backend/: pyproject.toml
backend/app/: airtable_service.py  auth.py  main.py  models.py
frontend/src/api/: api.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/components/wallet/: WalletDashboard.tsx
frontend/src/context/: AuthContext.tsx
